@startuml

component cashflow {
component cashflow.api.* {
class IncomeController {
  - IncomeService service;
  + List<Income> getAll();
  + Income get(Long id);
  + Income create(Income income);
  + Income save(Income income);
  + void delete(Long id);
}

class ExpenseController {
  - ExpenseService service;
  + List<Expense> getAll();
  + Expense get(Long id);
  + Expense create(Expense expense);
  + Expense save(Expense expense);
  + void delete(Long id);
}
}

component cashflow.core.* {

class IncomeServiceImpl {
    - IncomeRepository repository;
    + List<Income> getAll();
    + Income get(Long id);
    + Income create(Income income);
    + Income save(Income income);
    + void delete(Long id);
}

class ExpenseServiceImpl {
    - ExpenseRepository repository;
    + List<Expense> getAll();
    + Expense get(Long id);
    + Expense create(Expense expense);
    + Expense save(Expense expense);
    + void delete(Long id);
}

interface IncomeService<Income>{
    {abstract} List<Income> getAll();
    {abstract} Income get(Long id);
    {abstract} Income create(Income income);
    {abstract} Income save(Income income);
    {abstract} void delete(Long id);
}

interface ExpenseService<Expense>{
    {abstract} List<Expense> getAll();
    {abstract} Expense get(Long id);
    {abstract} Expense create(Expense expense);
    {abstract} Expense save(Expense expense);
    {abstract} void delete(Long id);
}
}

component cashflow.database.* {
interface IncomeRepository{
}

interface ExpenseRepository{
}

class Income {
    - long id;
    - String description;
    - Date dueDate;
    - BigDecimal amount;
}
class Expense {
    - long id;
    - String description;
    - Date dueDate;
    - BigDecimal amount;
}
}
}
class IncomeServiceImpl implements IncomeService
class ExpenseServiceImpl implements ExpenseService
IncomeController --> IncomeService
ExpenseController --> ExpenseService
IncomeServiceImpl --> IncomeRepository
ExpenseServiceImpl --> ExpenseRepository
IncomeRepository --> Income
ExpenseRepository --> Expense

@enduml